--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -32,5 +32,11 @@
         <item name="android:background">@color/toolbar_bkgroud_dark</item>
     </style>
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_buttom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_buttom</item>
+    </style>
+
+
 </resources>
 
