--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -35,6 +35,10 @@
         <item name="android:background">@color/toolbar_bkgroud_light</item>
     </style>
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_buttom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_buttom</item>
+    </style>
 
 
 
