--- a/app/src/main/res/layout/activity_insert_new_password.xml
+++ b/app/src/main/res/layout/activity_insert_new_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".insert_new_password.insert_new_password">
+    tools:context=".insert_new_password.Controller_insert_new_password">
 
 
     <FrameLayout
