feature-Encriptacion de contraseña y validacion de numero telefonico

--- a/app/src/main/res/layout/activity_qa_contacts.xml
+++ b/app/src/main/res/layout/activity_qa_contacts.xml
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         app:fab_colorNormal="@color/FloatingButton"
         app:fab_colorPressed="@color/PressFloatingButton"
-        app:fab_icon="@drawable/icon_add"
+        app:fab_icon="@drawable/icon_add_user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
