--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".reset_password">
+    tools:context=".reset_password.Controller_reset_password">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -81,12 +81,13 @@
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
                 app:boxBackgroundMode="outline">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/InputPhoneNumber_activityResetPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size_input"
-                    android:inputType="phone"/>
+                    android:inputType="phone"
+                    android:textSize="@dimen/text_size_input" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
