--- a/app/src/main/res/layout/activity_qa_main_menu.xml
+++ b/app/src/main/res/layout/activity_qa_main_menu.xml
@@ -25,20 +25,25 @@
             android:background="@drawable/style_toolbar"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/menu" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Menu" />
+
+            <ImageButton
+                android:id="@+id/imageButton_LogOut_ActivityQaMainMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_weight="0"
+                android:src="@drawable/icon_logout" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -50,8 +55,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
 
             <Switch
                 android:id="@+id/switch1"
@@ -65,7 +77,7 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/ToPanicButtom_button_activityqa_MainMenu"
+                    android:id="@+id/ToPanicButtom_button_activityQaMainMenu"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textAllCaps="false"
@@ -76,30 +88,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal">
 
+
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/ToContacts_button_activityqa_MainMenu"
+                    android:id="@+id/ToContacts_button_activityQaMainMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_buttonqamenu"
+                    style="@style/BackGround_colorButtonMenu"
                     android:text="@string/option_contacts" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/ToMap_button_activityqa_MainMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/option_map" />
 
             </LinearLayout>
 
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/LogOut_button_activityqa_MainMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/log_out" />
 
         </LinearLayout>
     </FrameLayout>
