--- a/app/src/main/res/layout/activity_qa_map.xml
+++ b/app/src/main/res/layout/activity_qa_map.xml
@@ -45,8 +45,8 @@
         android:id="@+id/Map_activityQaMap"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -62,6 +62,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:fab_addButtonColorNormal="@color/FloatingButton"
+        app:fab_addButtonPlusIconColor="@color/black"
         app:fab_addButtonColorPressed="@color/PressFloatingButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
