--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="gray_bkgroud">#3A3A3A</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow_btn_contacts">#FFE500</color>
     <color name="toolbar_bkgroud_light">#BDBDBD</color>
     <color name="toolbar_bkgroud_dark">#252525</color>
     <color name="gray_bkgroud_appdata_night">#3A3A3A</color>
