feature-min-recibir otp

--- a/app/src/main/res/layout/activity_reset_password_code.xml
+++ b/app/src/main/res/layout/activity_reset_password_code.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".reset_password.reset_password_code">
+    tools:context=".reset_password.Controller_reset_password_code">
 
     <LinearLayout
         android:layout_width="409dp"
@@ -133,7 +133,7 @@
                 android:textSize="20dp"/>
         </LinearLayout>
         <Button
-            android:id="@+id/SendCode_button_activityResetpasswordCode"
+            android:id="@+id/VerifyCode_button_activityResetpasswordCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
