--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -71,26 +71,24 @@
                 android:text="Recuperar contraseña"
                 android:textSize="@dimen/text_title_size_sign_in" />
 
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center"
-                android:hint="Ingresa tu número"
+                android:hint="Correo electrónico"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
                 app:boxBackgroundMode="outline">
-
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputPhoneNumber_activityResetPassword"
+                    android:id="@+id/InputEmail_activityReset_Password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="phone"
-                    android:textSize="@dimen/text_size_input" />
+                    android:textSize="@dimen/text_size_input"
+                    android:inputType="textEmailAddress"/>
             </com.google.android.material.textfield.TextInputLayout>
-
-
 
         </FrameLayout>
     </androidx.cardview.widget.CardView>
