--- a/app/src/main/res/layout/activity_reset_password_code.xml
+++ b/app/src/main/res/layout/activity_reset_password_code.xml
@@ -7,144 +7,155 @@
     android:layout_height="match_parent"
     tools:context=".reset_password.Controller_reset_password_code">
 
-    <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="OTP Verification"
-            android:textSize="30dp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:text="@string/message_post_code" />
-
-        <TextView
-            android:id="@+id/TextView_activityResetpasswordCode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+    <androidx.cardview.widget.CardView
+        style="@style/BackGround_screen_appdata"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        app:cardCornerRadius="21dp"
+        app:cardElevation="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <EditText
-                android:id="@+id/editTextNumber_01_activityResetpasswordCode"
-                android:layout_width="40dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:maxLength="1"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:inputType="number" />
-            <EditText
-                android:id="@+id/editTextNumber_02_activityResetpasswordCode"
-                android:layout_width="40dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:maxLength="1"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:inputType="number"  />
-            <EditText
-                android:id="@+id/editTextNumber_03_activityResetpasswordCode"
-                android:layout_width="40dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:maxLength="1"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:inputType="number"  />
-            <EditText
-                android:id="@+id/editTextNumber_04_activityResetpasswordCode"
-                android:layout_width="40dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:maxLength="1"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:inputType="number"  />
-            <EditText
-                android:id="@+id/editTextNumber_05_activityResetpasswordCode"
-                android:layout_width="40dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:maxLength="1"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:inputType="number"  />
-            <EditText
-                android:id="@+id/editTextNumber_06_activityResetpasswordCode"
-                android:layout_width="40dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:imeOptions="actionNext"
-                android:importantForAutofill="no"
-                android:maxLength="1"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                android:inputType="number"  />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="62dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="¿No recibiste el OTP?"
-                android:textSize="20dp"/>
+                android:text="OTP Verification"
+                android:textSize="30dp"
+                android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/TextView_resendOTP_activityResetpasswordCode"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text=" Reenviar"
-                android:textColor="#FF0000"
-                android:textStyle="bold"
-                android:textSize="20dp"/>
-        </LinearLayout>
-        <Button
-            android:id="@+id/VerifyCode_button_activityResetpasswordCode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_gravity="center"
-            android:text="@string/verificar"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="45dp"
-            android:paddingEnd="45dp"
-            android:textSize="20dp"/>
+                android:textSize="20dp"
+                android:text="@string/message_post_code" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/TextView_activityResetpasswordCode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/editTextNumber_01_activityResetpasswordCode"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:maxLength="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:inputType="number" />
+                <EditText
+                    android:id="@+id/editTextNumber_02_activityResetpasswordCode"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:maxLength="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:inputType="number"  />
+                <EditText
+                    android:id="@+id/editTextNumber_03_activityResetpasswordCode"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:maxLength="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:inputType="number"  />
+                <EditText
+                    android:id="@+id/editTextNumber_04_activityResetpasswordCode"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:maxLength="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:inputType="number"  />
+                <EditText
+                    android:id="@+id/editTextNumber_05_activityResetpasswordCode"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:maxLength="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:inputType="number"  />
+                <EditText
+                    android:id="@+id/editTextNumber_06_activityResetpasswordCode"
+                    android:layout_width="40dp"
+                    android:layout_height="45dp"
+                    android:gravity="center"
+                    android:imeOptions="actionNext"
+                    android:importantForAutofill="no"
+                    android:maxLength="1"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:inputType="number"  />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="¿No recibiste el OTP?"
+                    android:textSize="20dp"/>
+
+                <TextView
+                    android:id="@+id/TextView_resendOTP_activityResetpasswordCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text=" Reenviar"
+                    android:textColor="#FF0000"
+                    android:textStyle="bold"
+                    android:textSize="20dp"/>
+            </LinearLayout>
+            <Button
+                android:id="@+id/VerifyCode_button_activityResetpasswordCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"
+                android:text="@string/verificar"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingStart="45dp"
+                android:paddingEnd="45dp"
+                android:textSize="20dp"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
