feature-listas todas sus funcionalidadesv0.5

--- a/app/src/main/res/layout/activity_qa_map.xml
+++ b/app/src/main/res/layout/activity_qa_map.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/BackGround_screen_menu"
-    tools:context=".qa_map">
+    tools:context=".gmaps.Controller_qa_map">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/linearLayout"
