--- a/app/src/main/res/layout/activity_qa_main_menu.xml
+++ b/app/src/main/res/layout/activity_qa_main_menu.xml
@@ -60,7 +60,7 @@
 
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/FullNameUser_TextView_activityQaMainMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
