--- a/app/src/main/res/layout/activity_qa_panic_button.xml
+++ b/app/src/main/res/layout/activity_qa_panic_button.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/BackGround_screen_menu"
-    tools:context=".qa_panic_button">
+    tools:context=".gmaps.Controller_qa_panic_button">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/linearLayout"
