--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bkgroud"
-    tools:context=".reset_password.Controller_reset_password">
+    tools:context=".Controller.Controller_reset_password">
 
     <FrameLayout
         android:layout_width="match_parent"
