--- a/app/src/main/res/layout/activity_reset_password_code.xml
+++ b/app/src/main/res/layout/activity_reset_password_code.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".reset_password.Controller_reset_password_code">
+    tools:context=".Controller.Controller_reset_password_code">
 
 
     <androidx.cardview.widget.CardView
