--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -3,6 +3,7 @@
     <dimen name="text_size_sign_in">20dp</dimen>
     <dimen name="text_title_size_sign_in">20dp</dimen>
     <dimen name="text_size_input">18dp</dimen>
+    <dimen name="text_size_input_contact">12dp</dimen>
     <dimen name="text_size_log_in">17dp</dimen>
     <dimen name="separation_of_ET_log_in">10dp</dimen>
     <dimen name="sizo_icon_user">120dp</dimen>
