--- a/app/src/main/res/drawable/background_buttongeneral_ripple.xml
+++ b/app/src/main/res/drawable/background_buttongeneral_ripple.xml
@@ -3,9 +3,9 @@
     android:color="?android:attr/colorControlHighlight">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="#000000"></solid>
-            <corners android:radius="100dp"></corners>
+            <solid android:color="@color/pressBtn"></solid>
+            <corners android:radius="30dp"></corners>
         </shape>
     </item>
-    <item android:drawable="@drawable/background_buttonsos"></item>
+    <item android:drawable="@drawable/background_buttongeneral"></item>
 </ripple>
